# MagicBracketSimulator

./: .firebaseignore  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DATA_FLOW.md  GCP_MIGRATION_FIX_PLAN.md  MODE_SETUP.md  MOXFIELD_SETUP.md  OVERNIGHT_STATUS.md  PR_DESCRIPTION.md  README.md  SWARM_MIGRATION_PLAN.md  Start-MagicBracket.bat  database.rules.json  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  verify_simulation_grid.py
.Jules/: palette.md
.claude/: settings.json
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache
.gemini/: config.yaml
.jules/: bolt.md  forge.md  kickstart.md  palette.md  scribe.md  sentinel.md  showcase.md
agent-memory/: README.md  avoid-list.md  codebase-map.md  open-backlog.md  style-decisions.md
analysis-service/: PRD.md  README.md  judge_agent.py  log_parser.py  main.py  pyproject.toml  rubric.md
analysis-service/tests/: test_api.py  test_log_parser.py
api/: .env.example  .env.local.example  .firebaseignore  .firebaserc  Dockerfile  PRD.md  README.md  apphosting.yaml  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.server.config.ts
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_ISSUES.md  DATA_FLOW.md  DEPLOYMENT.md  GCP_MIGRATION_FIX_PLAN.md  IMPLEMENTATION_PLAN_WORKER_SPLIT.md  MODE_SETUP.md  PRECON_SYNC.md  README.md  SECRETS_SETUP.md  STALE_SWEEPER.md  SWEEPER_ALERTING.md  TESTING.md  WORKER_MODES.md  WORKER_WINDOWS_NATIVE_MIGRATION.md  sweeper-alert-policy.yaml
forge-log-analyzer/: .env.example  .gitignore  README.md  package-lock.json  package.json
forge-simulation-engine/: .dockerignore  Dockerfile  PRD.md  README.md  run_docker.sh  run_sim.sh
frontend/: .env.example  .env.local.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
infra/: firestore-ttl-setup.sh  gcs-lifecycle.json
local-worker/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
misc-runner/: Dockerfile  go.mod  main.go
orchestrator-service/: .dockerignore  .env.example  .gitignore  PRD.md  README.md  apphosting.yaml  cloudbuild.yaml  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json
scripts/: ALLOWED_USERS.md  README.md  add-allowed-user.js  build-frontend-ci.sh  build-frontend.sh  build.sh  check-docker-tag.sh  ci-analysis.sh  deploy-firebase.sh  ensure-rollout.sh  extract-gcp-project.sh  fetch-frontend-config.js  get-cloud-run-url.js  init-swarm-manager.sh  install-api-deps.sh  install-provision-deps.sh  install-root-deps.sh  lint.sh  load-doppler-secrets.sh  notify-workers.sh  populate-frontend-secret.js  run-dev.js  (+11 more)
(+511 files in other folders)
